Adjusted Overflow Issue On Demo Containers

--- a/src/components/Demos/Demos.scss
+++ b/src/components/Demos/Demos.scss
@@ -18,6 +18,7 @@
   }
   &__container {
     padding: 1.5rem;
+    overflow: visible;
     //width: 50%;
     //height: 50%;
   }
